<resources>
    <string name="search_hint">Search for a Country</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Please Select a Country</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="country_flag">Country flag</string>
</resources>
