<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewRoot"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@drawable/background_rounded_top"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="18dp"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Country"
                android:textColor="#495464"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:textSize="16sp"
                android:textColor="#495464"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_title"/>

            <ImageView
                android:id="@+id/img_dismiss"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:elevation="20dp"
                android:outlineProvider="none"
                android:src="@drawable/ic_clear_black_24dp"
                android:clickable="true"
                android:contentDescription="@string/dismiss_button_content_description"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@id/textView_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/rl_query_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/editText_search"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_toStartOf="@+id/img_clear_query"
                android:layout_toLeftOf="@+id/img_clear_query"
                android:background="@drawable/background_round_bordered_line"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions"
                android:paddingHorizontal="14dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:importantForAutofill="no"/>

            <ImageView
                android:id="@+id/img_clear_query"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:alpha="0.7"
                android:clickable="true"
                android:contentDescription="@string/clear_search_button_content_description"
                android:focusable="true"
                android:padding="10dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_backspace_black_24dp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_countryDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="21dp"
            android:dividerHeight="1dp" />

        <com.futuremind.recyclerviewfastscroll.FastScroller
            android:id="@+id/fastscroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/textView_noresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:text="@string/no_result_found"
            android:textColor="@android:color/primary_text_light"
            android:visibility="gone" />

    </LinearLayout>

</androidx.cardview.widget.CardView>